--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "culori": "^4.0.2",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.555.0",
+    "lz-string": "^1.5.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/culori": "^4.0.1",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
